# visionaudit

./: README.md  pyproject.toml
sample_data/expected_reports/: baseline_report.json
scripts/: generate_sample_data.py
src/visionaudit/: audit.py  cli.py  config.py  models.py  report.py  scanner.py
src/visionaudit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_audit.py  test_cli.py
